Initial update: build is green, some components works